// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectsReducer Adds a new project correctly 1`] = `
Object {
  "12345": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "12345",
  },
  "67890": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "67890",
  },
  "ids": Array [
    "12345",
    "67890",
  ],
  "meta": Object {
    "activeProject": "67890",
  },
}
`;

exports[`projectsReducer Inserts a new project correctly 1`] = `
Object {
  "12345": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "12345",
  },
  "ids": Array [
    "12345",
  ],
  "meta": Object {
    "activeProject": "12345",
  },
}
`;

exports[`projectsReducer Sets an active project correctly 1`] = `
Object {
  "12345": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "12345",
  },
  "67890": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "67890",
  },
  "ids": Array [
    "12345",
    "67890",
  ],
  "meta": Object {
    "activeProject": "67890",
  },
}
`;

exports[`projectsReducer Updates a project correctly 1`] = `
Object {
  "12345": Object {
    "createdDate": "01-01-2021",
    "lastAnalyzed": null,
    "lastModified": "02-01-2021",
    "name": "updated name",
    "samples": Array [],
    "uuid": "12345",
  },
  "ids": Array [
    "12345",
  ],
  "meta": Object {
    "activeProject": "12345",
  },
}
`;
